If someone wants to properly factor the size calculation of the additional space for the close button from KTabWidget to KTabBar (where the close button is drawn), please do so by any means.

For now though, I just want tab icons + close button to autoshrink
correctly in my Konqueror (only adding tab scroll arrows when
they're actually needed), and this makes it work.

BUG: 159951

svn path=/trunk/KDE/kdelibs/; revision=804578